buildscript {
  repositories {
    mavenLocal()
    maven { url = "$repoUrl" }
    mavenCentral()
    jcenter()
    maven {
      url "https://plugins.gradle.org/m2/"
    }
  }
  dependencies {
    classpath 'org.ajoberstar:grgit:2.1.0'
    classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.1.11'
    classpath 'org.ajoberstar.reckon:reckon-gradle:0.8.0'
    classpath 'com.smokejumperit.gradle.license:Gradle-License-Report:0.0.2'
  }
}

plugins {
  id 'org.ajoberstar.grgit' version '2.1.0'
  id "com.github.spotbugs" version "2.0.0"
  id "com.adarshr.test-logger" version "2.0.0"
}

if (project.hasProperty("reckon.scope")) {
  apply plugin: "org.ajoberstar.reckon"
  reckon {
    scopeFromProp()
    stageFromProp('dev', 'rc', 'final')
  }
}

def cmPrivateRepoUser = System.getenv("CM_PRIVATE_REPO_USER") ?: "$defaultCmPrivateRepoUser"
def cmPrivateRepoPassword = System.getenv("CM_PRIVATE_REPO_PASSWORD") ?: "$defaultCmPrivateRepoPassword"

def springBootApps() {
  subprojects.findAll { subproject -> subproject.plugins.hasPlugin('org.springframework.boot') }
}

def env = project.hasProperty('env') ? project.getProperty('env') : 'local'
// spring dependeny management override, if you remove silent errors can happen
ext['junit-jupiter.version'] = "$junitJupiterVersion"

allprojects {

  repositories {
    mavenLocal()
    maven {url = "$cdpRepoUrl"}
    maven { url = "$repoUrl" }
  }
  apply plugin: 'idea'
  apply plugin: 'eclipse'
  group = 'com.sequenceiq'

  configurations {
    testRuntime {
      exclude group: "org.springframework.cloud"
    }
  }

  // override Spring Depenendencies
  ext['commons-codec.version'] = commonsCodecVersion
  ext['hibernate-validator.version'] = hibernateValidatorVersion
  ext['jackson.version'] = jacksonVersion

  // override AWS SDK Depenendencies
  ext['netty.version'] = "4.1.42.Final"

  configurations {
      all {
          resolutionStrategy {
              force 'commons-collections:commons-collections:3.2.2'
              force 'xerces:xercesImpl:2.12.0'
              force 'commons-beanutils:commons-beanutils:1.9.4'
              force "commons-codec:commons-codec:$commonsCodecVersion"
              force "commons-codec:commons-codec:$commonsCodecVersion"
              force "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jacksonVersion"
              force "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
              force "org.codehaus.jackson:jackson-jaxrs:1.9.13"
              force "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
              force "org.codehaus.jackson:jackson-core-asl:1.9.13"
              force "org.codehaus.jackson:jackson-xc:1.9.13"
              force "org.testng:testng:$testNgVersion"
          }
      }
  }

}

subprojects {
  apply plugin: 'java'
  apply plugin: 'maven'
  apply plugin: 'checkstyle'
  apply plugin: 'com.github.spotbugs'
  apply plugin: 'jacoco'
  apply plugin: 'com.adarshr.test-logger'


  sourceCompatibility = 11
  targetCompatibility = 11

  configurations {
    deployerJars
    all*.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
    all*.exclude group: 'com.google.guava', module: 'guava-jdk5'
  }

  dependencies {
    checkstyle('com.puppycrawl.tools:checkstyle:8.11')
    deployerJars("org.springframework.build.aws:org.springframework.build.aws.maven:3.0.0.RELEASE")
    testImplementation group: 'org.mockito',               name: 'mockito-junit-jupiter',          version: mockitoVersion
    testImplementation group: 'org.junit.jupiter',         name: 'junit-jupiter',                  version: junitJupiterVersion
    //adds vintage engine automatically and ensures that Junit4 testcases are run by default for all projects
    testRuntimeOnly    group: 'org.junit.vintage',         name: 'junit-vintage-engine',           version: junitJupiterVersion
  }

  spotbugs {
    toolVersion = "3.1.11"
    excludeFilter = file("$rootProject.projectDir/config/spotbugs/excludeFilter.xml")
    effort = "min"
  }

  jacoco {
    toolVersion = "0.8.4"
    reportsDir = file("$buildDir/reports/jacoco")
  }

  jacocoTestReport {
    reports {
      xml.enabled true
      csv.enabled true
      html.enabled true
    }
      afterEvaluate {
          classDirectories.from = files(classDirectories.files.collect {
              fileTree(
                      dir: it,
                      exclude: [
                              '**/converter/mapper/**',
                              '**/sequenceiq/it/**',
                              '**/cloudbreak/api/endpoint/**',
                              '**/cloudbreak/domain/**'
                      ]
              )
          })
      }
  }

  test {
    useJUnitPlatform ()
    testlogger{
      showSummary true
      showStandardStreams true
    }
    jacoco {
      destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
      classDumpDir = file("$buildDir/jacoco/classpathdumps")
    }
  }

  tasks.withType(com.github.spotbugs.SpotBugsTask) {
    reports {
      xml.enabled false
      html.enabled true
    }

  }

  checkstyle {
    toolVersion = "8.11"
  }

  checkstyleMain {
    ignoreFailures = false
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
    configProperties = ['config_loc': "$rootDir/config/checkstyle"]
  }

  checkstyleTest {
    ignoreFailures = false
    configFile = rootProject.file('config/checkstyle/checkstyle.xml')
  }

  test.testLogging.showStandardStreams = project.hasProperty('showStandardStreams')

  task allDeps(type: DependencyReportTask) {}

  task status {
    doLast {
      println grgit.status()
    }
  }

  repositories {
    mavenLocal()
    maven { url = "$repoUrl" }
    mavenCentral()
    maven { url "https://cloudbreak-maven.s3.amazonaws.com/releases" }
    maven { url "https://repo.spring.io/release" }
    maven { url "https://plugins.gradle.org/m2/" }
    maven {
      authentication {
        basic(BasicAuthentication)
      }
      credentials(PasswordCredentials) {
        username "$cmPrivateRepoUser"
        password "$cmPrivateRepoPassword"
      }
      url "https://repository.cloudera.com/cloudera/list/cm-private/"
    }
  }

  eclipse {
    classpath {
      file.whenMerged {
        cp -> if (project.hasProperty('protobuf')) {
          cp.entries = cp.entries.findAll { element -> !element.getPath().startsWith('src/generated')}
          cp.entries.addAll(
            [
              new org.gradle.plugins.ide.eclipse.model.SourceFolder('src/generated/main/java', null),
              new org.gradle.plugins.ide.eclipse.model.SourceFolder('src/generated/main/grpc', null)
            ]
          )
        }
      }
    }
  }
}